--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-.DS_Store
+node_modules
+build
 .idea
-.vscode
-*.ai
-*.log
-*.pdf
-*.psd
-*.sublime*
-node_modules/
-npm-debug.*
-source/css/*.css
-source/css/*.map
-Thumbs.db
+.DS_Store
+raw/**/*.jpg
+raw/**/*.jpeg
+raw/**/*.png
+raw/**/*.svg
+!raw/**/README.md
